Well, IE6 seems to have some problems with long line wrapping. It should work with all IE6 related fixes. But for some reason it breaks as soon as a white-space:pre-wrap is added to the css declaraion. The wrap itself works, but it does not free the wrapped space, hence the page width remains as if nowrap was choosen.
I fixed it by using a workaround for IE6 only: The comments section has now a width restriction (via css, can be customized in classic.css or custom.css)

While i was at it i added some divs for better styling. 

There was a distribution error in the radeox-jars. I also recompiled them and fixed a minor inconvenience directly related to this issue. As radeox seems to be non existing i again added the radeox sources (1.1-beta-2 now) as reference. and to be honest, i would rename it to radeox-1.1 (release). I do not see any more need for changes there...

git-svn-id: http://scarab.tigris.org/svn/scarab@11009 3c7165bb-d2ef-0310-b724-bafd9a86081f

--- a/trunk/src/webapp/skins/classic.css
+++ b/trunk/src/webapp/skins/classic.css
@@ -91,7 +91,7 @@
 
 #scb_banner table {
     border-style:none;
-    margin:8px;
+    margin:8px 0px;
     padding:0px;
     width:100%;
 }
@@ -326,6 +326,42 @@ span.displayValue {
 	margin-left:15px;
 }
 
+/* ============================================================== */
+/* Issue comments                                                 */
+/* ============================================================== */
+
+/*
+   provide a cross browser compatible pre which uses auto 
+   word wrap for long lines: 
+*/
+.comment {
+  white-space: pre-wrap;       /* css-3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+  _white-space:pre;
+}
+
+.scb_comment {
+  _margin-top:20px;
+}
+
+.scb_comment .content {
+	margin-top:5px;
+	margin-left:35px;
+}
+
+.scb_comment .content .comment {
+	margin-top:0px;
+	background-color:#f8f8f8;
+	margin:0px;
+	padding:10px;
+}
+
+.scb_comment .counter {
+    margin-right:10px;
+}
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 /* ==== From here on downwards the refactoring must still take place. ==== */
@@ -1272,6 +1308,7 @@ ul {
 	border-bottom-style: none;
 	margin-left: 2px;
 	margin-right: 2px;
+  _width:640px; // for ie6 only (long-line wrapping broken)
 }
 
 .scarab-canvas div h4 {
@@ -1326,18 +1363,7 @@ a:link,#navcolumn a:visited,.app a:visited,.tasknav a:visited {
 	color: #003163
 }
 
-/*
-   provide a cross browser compatible pre which uses auto 
-   word wrap for long lines: 
-*/
-pre {
-	white-space: -moz-pre-wrap;
-	white-space: -pre-wrap;
-	white-space: -o-pre-wrap;
-	white-space: pre-wrap;
-	word-wrap: break-word;
-	display: inline;
-}
+	
 
 /*
     Treeview related style definitions
